--- a/languages/de_DE.po
+++ b/languages/de_DE.po
@@ -8,7 +8,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"PO-Revision-Date: 2020-01-16 16:06+0000\n"
+"PO-Revision-Date: 2020-01-26 09:59+0000\n"
 "Last-Translator: craftwerk <pst@crftwrk.de>\n"
 "Language-Team: Deutsch\n"
 "X-Generator: Loco https://localise.biz/\n"
@@ -328,8 +328,8 @@ msgid ""
 "Sorry, but nothing matched your search terms. Please try again with some "
 "different keywords."
 msgstr ""
-"Nichts stimmte mit Deinen Suchbegriffen überein. Bitte versuche es erneut "
-"mit verschiedenen Schlüsselwörtern."
+"Nichts stimmte mit Deinen Suchbegriffen überein. Versuche es erneut mit "
+"anderen Stichwörtern."
 
 #: template-parts/content-none.php:43
 msgid ""
