--- a/languages/de_DE_formal.po
+++ b/languages/de_DE_formal.po
@@ -8,7 +8,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"PO-Revision-Date: 2020-01-16 18:33+0000\n"
+"PO-Revision-Date: 2020-01-26 09:57+0000\n"
 "Last-Translator: craftwerk <pst@crftwrk.de>\n"
 "Language-Team: Deutsch (Sie)\n"
 "X-Generator: Loco https://localise.biz/\n"
@@ -69,7 +69,7 @@ msgstr "Ohne Sidebar"
 #: single-sidebar-none.php:38 single-full-width-image.php:43 single.php:37
 #: single-sidebar-left.php:40
 msgid " by "
-msgstr "von"
+msgstr " von "
 
 #. Name of the template
 msgid "Full width image"
@@ -328,9 +328,8 @@ msgid ""
 "Sorry, but nothing matched your search terms. Please try again with some "
 "different keywords."
 msgstr ""
-"\n"
-"Es tut uns leid, aber nichts entspricht Ihren Suchkriterien. Bitte versuchen "
-"Sie es mit anderen Stichwörtern erneut."
+"Nichts entspricht Ihren Suchkriterien. Bitte versuchen Sie es mit anderen "
+"Stichwörtern erneut."
 
 #: template-parts/content-none.php:43
 msgid ""
