--- a/languages/de_DE.po
+++ b/languages/de_DE.po
@@ -8,9 +8,9 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"PO-Revision-Date: 2020-03-03 06:27+0000\n"
+"PO-Revision-Date: 2020-03-12 10:42+0000\n"
 "Last-Translator: craftwerk <pst@crftwrk.de>\n"
-"Language-Team: Deutsch\n"
+"Language-Team: German\n"
 "X-Generator: Loco https://localise.biz/\n"
 "Language: de_DE\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
@@ -36,7 +36,7 @@ msgstr "Warenkorb"
 
 #: header.php:243 header-woocommerce-large-search.php:238
 msgid "To find out your shipping cost , Please proceed to checkout."
-msgstr "Um Deine Versandkosten zu berechnen, gehe bitte zur Kasse."
+msgstr "Um deine Versandkosten zu berechnen, gehe bitte zur Kasse."
 
 #: header.php:244 header-woocommerce-large-search.php:239
 msgid "Edit cart"
@@ -216,7 +216,7 @@ msgid ""
 "our use of cookies."
 msgstr ""
 "Cookies erleichtern die Bereitstellung unserer Dienste. Mit der Nutzung "
-"unserer Dienste erklärst Du Dich damit einverstanden, dass wir Cookies "
+"unserer Dienste erklärst du dich damit einverstanden, dass wir Cookies "
 "verwenden."
 
 #: footer.php:93
@@ -314,7 +314,7 @@ msgstr "Nichts gefunden für"
 msgid ""
 "Ready to publish your first post? <a href=\"%1$s\">Get started here</a>."
 msgstr ""
-"Bereit Deinen ersten Post zu veröffentlichen? <a href=\"%1$s\"> Hier geht's "
+"Bereit deinen ersten Post zu veröffentlichen? <a href=\"%1$s\"> Hier geht's "
 "los </a>."
 
 #: template-parts/content-none.php:37
@@ -322,7 +322,7 @@ msgid ""
 "Sorry, but nothing matched your search terms. Please try again with some "
 "different keywords."
 msgstr ""
-"Nichts stimmte mit Deinen Suchbegriffen überein. Versuche es erneut mit "
+"Nichts stimmte mit deinen Suchbegriffen überein. Versuche es erneut mit "
 "anderen Stichwörtern."
 
 #: template-parts/content-none.php:43
@@ -330,7 +330,7 @@ msgid ""
 "It seems we can&rsquo;t find what you&rsquo;re looking for. Perhaps "
 "searching can help."
 msgstr ""
-"Es scheint, dass wir nicht finden können, wonach Du suchst. Vielleicht kann "
+"Es scheint, dass wir nicht finden können, wonach du suchst. Vielleicht kann "
 "das weitersuchen helfen?"
 
 #: languages/translations-isopost.php:1
